--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,13 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>通知測試</h3>
+  <p>目前狀態：</p>
+  <pre>
+    {{fcm_status}}
+  </pre>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    請使用<a href="http://45.32.19.41/testPush.html"> 這個網頁 </a> 來測試推播通知喔！ 
   </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
